gap height fixes

--- a/www/main.css
+++ b/www/main.css
@@ -10,7 +10,7 @@ body {
 
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     grid-auto-rows: minmax(150px, auto);
-    grid-gap: 4em;
+    grid-column-gap: 4em;
 
 }
 
@@ -175,5 +175,5 @@ p {
     animation-duration: 0.6s;
 }
 .map {
-    margin-top: 5px;
+    margin-top: 35px;
 }
